auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a30f583c",
+   "id": "b7ee40b5",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96099da2",
+   "id": "d3baac06",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717bea8f",
+   "id": "25fddc7a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f662491",
+   "id": "b5dae846",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3702dfd8",
+   "id": "607cb0ce",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5c99205",
+   "id": "2915c1b4",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e599cf",
+   "id": "82e4a8ce",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bc40a66",
+   "id": "ebeb8bac",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edcaa014",
+   "id": "eabdd276",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b216dfc",
+   "id": "ce373664",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e02bdb14",
+   "id": "91cc2984",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9473d9e1",
+   "id": "3a3cf31f",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f2d357",
+   "id": "3dc60ff0",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "858a6a0d",
+   "id": "6c5462ef",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "944147c2",
+   "id": "ecdcdcc3",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e26d9b7",
+   "id": "df9e2304",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ccfdf6",
+   "id": "eb76f4e6",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03ecd3f2",
+   "id": "68dbcd79",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1351d75",
+   "id": "580620d4",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f8289d",
+   "id": "7bad61a9",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6eea300",
+   "id": "cb32d663",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1b1731",
+   "id": "84432edb",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdf42be2",
+   "id": "e4a112e4",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d13bcf",
+   "id": "88120fbc",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5387586",
+   "id": "9bc8d5f7",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb876330",
+   "id": "45ff6f1f",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd4835af",
+   "id": "981a045d",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62987193",
+   "id": "5da35b31",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec3c34b",
+   "id": "e7ae8c12",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02bdd9e8",
+   "id": "dbbe1d3b",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2df7987c",
+   "id": "882cecec",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca12e05",
+   "id": "dfa3179b",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccbcc611",
+   "id": "9c42aa6d",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "328bb2c6",
+   "id": "8b4be1c8",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e30aa8",
+   "id": "31146a49",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcdb921b",
+   "id": "b45ebe45",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b60dc7fb",
+   "id": "0728cc5c",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f66fb77",
+   "id": "472cbdf3",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb7bf1b",
+   "id": "698c31c8",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45f76077",
+   "id": "aeb5a1a8",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd7902e1",
+   "id": "e785e02d",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d925cf3",
+   "id": "47342a8a",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0501aa",
+   "id": "d9cd4477",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733575bc",
+   "id": "a08b8dd0",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d539110",
+   "id": "68aa671e",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98adc785",
+   "id": "b16e3fdd",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb22b7e2",
+   "id": "c4989a03",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c28afd3",
+   "id": "21c61ad0",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "888fc4ab",
+   "id": "de07e1d7",
    "metadata": {
     "hide-output": false
    },
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd0d7680",
+   "id": "8c793754",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925c4790",
+   "id": "bddae7a6",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f43e83a8",
+   "id": "da082b72",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f11b396",
+   "id": "5551efe5",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "484c68e3",
+   "id": "4554f5d1",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8cead94",
+   "id": "4dcbef74",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "893c46ca",
+   "id": "ed937e37",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57585554",
+   "id": "566a7eb9",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12dec87",
+   "id": "6929b640",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1382328a",
+   "id": "103b2c6d",
    "metadata": {
     "hide-output": false
    },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8425f68",
+   "id": "f98f1f02",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ffe527d",
+   "id": "ed5b25a8",
    "metadata": {
     "hide-output": false
    },
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "278fa172",
+   "id": "aa36d461",
    "metadata": {
     "hide-output": false
    },
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf880082",
+   "id": "1f3466c0",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6001206d",
+   "id": "4fcc7f8e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85ad78e",
+   "id": "a32126ba",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465034b8",
+   "id": "065497e6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ce062c",
+   "id": "d26f5a18",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe3dc8d",
+   "id": "b1826506",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0be5de0",
+   "id": "ff046793",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24284ffa",
+   "id": "fb7b73fd",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1a1ae5",
+   "id": "c34a5c83",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c62f008",
+   "id": "8e293f2f",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1813ec2",
+   "id": "080f0505",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd29edb",
+   "id": "0d6b7638",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d1e7252",
+   "id": "6e0e51b1",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "070dc241",
+   "id": "af5eaec3",
    "metadata": {
     "hide-output": false
    },
@@ -1215,7 +1215,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763756.613424,
+  "date": 1750896810.8490055,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
