--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfb450ca",
+   "id": "930f4467",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "455fc47a",
+   "id": "3bbe8097",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca6b6915",
+   "id": "79f29c4f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131f814d",
+   "id": "a1cb9be8",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2595378",
+   "id": "6867b0dc",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "518880fc",
+   "id": "0e07809f",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c5d538",
+   "id": "38f41360",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c79b9ee",
+   "id": "efbc9527",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c898a00",
+   "id": "9f3b361f",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b572f0ff",
+   "id": "1fb42209",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd268a4d",
+   "id": "903ba0b7",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beceffa6",
+   "id": "7f7913a0",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4002edfa",
+   "id": "74ae17e2",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68711a33",
+   "id": "c5d41038",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9a7d08a",
+   "id": "6a8cf300",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5830793b",
+   "id": "3cfd1e2f",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bcd6240",
+   "id": "bf20ebeb",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efbb45c1",
+   "id": "aad46831",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81858562",
+   "id": "ae38091b",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7885350",
+   "id": "5a8a0d73",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b743374",
+   "id": "0f914254",
    "metadata": {
     "hide-output": false
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd59df2c",
+   "id": "be5f448f",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e812ccbe",
+   "id": "cf0e2dcd",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1cd3274",
+   "id": "d742e0e2",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f694bb77",
+   "id": "ebeab888",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "247cc804",
+   "id": "21e72f9f",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b503db3",
+   "id": "38030b15",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d14073",
+   "id": "ce982b6b",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc292cef",
+   "id": "ddb277a9",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3072a25",
+   "id": "2a810396",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "406f840c",
+   "id": "85283672",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd546008",
+   "id": "b588ea63",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295e79fa",
+   "id": "9d0bfd9c",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4ecf4e3",
+   "id": "88876356",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd85166",
+   "id": "c3e202ae",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f372b2c",
+   "id": "bcf3ded8",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f6d2493",
+   "id": "6b41afb1",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e76a99",
+   "id": "c777240d",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "828f03bc",
+   "id": "db18ef35",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27aab01f",
+   "id": "b3e39fe6",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a8da79",
+   "id": "28ff4e2f",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c20907",
+   "id": "1e14381d",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3585e8c5",
+   "id": "56f4365a",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e977d65c",
+   "id": "0cb409ab",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a6b4c5",
+   "id": "f7167c9d",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21d64b67",
+   "id": "2de0910f",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80410c70",
+   "id": "c07a64d6",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37068892",
+   "id": "825f394e",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a84031f",
+   "id": "8a7404ea",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12e8e08d",
+   "id": "e08248a7",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f5973c",
+   "id": "1415e638",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b6ef418",
+   "id": "89e4d714",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be696ab8",
+   "id": "b7cb02f4",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d56920a",
+   "id": "9a77bc75",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb1e5547",
+   "id": "65b56eb2",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b5cc4e",
+   "id": "48717525",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45386c1a",
+   "id": "e6d59280",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22df5ff3",
+   "id": "e919f3d9",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af985de",
+   "id": "cc6ccfcc",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e65f471e",
+   "id": "e532a6c9",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59ee33da",
+   "id": "d384bd59",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68d2342",
+   "id": "896ce490",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d88fd1",
+   "id": "8e3e35fa",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0cfeb7d",
+   "id": "e174b803",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763756.8407223,
+  "date": 1750896811.066422,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
