--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dcaa77a8",
+   "id": "0116fc5d",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d64bc987",
+   "id": "f04b654a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05944d32",
+   "id": "ca094900",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2016476",
+   "id": "fc6c38d1",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0314702a",
+   "id": "bd2ce24b",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45e6572",
+   "id": "0227b446",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33766ac",
+   "id": "574c642c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91180995",
+   "id": "ac9ccf9a",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692e80eb",
+   "id": "c1862d07",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdac0196",
+   "id": "8177b67f",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063cb648",
+   "id": "48d7b798",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fe6c457",
+   "id": "21d0cdb0",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253d2868",
+   "id": "73367e5a",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09af910c",
+   "id": "917a379c",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d0762c1",
+   "id": "74c03e9f",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c00f3c",
+   "id": "38351faf",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f79fac",
+   "id": "53888dac",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f0a272",
+   "id": "e2fa7f0f",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c7e676a",
+   "id": "80e48160",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628fe872",
+   "id": "a6fc55a9",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4954630",
+   "id": "84c34e40",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c01229",
+   "id": "753e2386",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54639fee",
+   "id": "518b75a4",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "302c5131",
+   "id": "80d1dd66",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8b77a8",
+   "id": "e6d1b4a8",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435a2633",
+   "id": "3ad8aa35",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5d9e05b",
+   "id": "0af5dd8c",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659e1889",
+   "id": "91c593af",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "363f8335",
+   "id": "a1f23180",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b64688",
+   "id": "85174143",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a214e13",
+   "id": "647efb32",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db9de82",
+   "id": "5e52781b",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6aad313",
+   "id": "b0933a6d",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a3a5d24",
+   "id": "5fcc3ae3",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00be7153",
+   "id": "71d5ba3e",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed0d6ea0",
+   "id": "4344bdc5",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e50ce1",
+   "id": "7d5e5236",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "949642b3",
+   "id": "5a69ab17",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da9c4ae2",
+   "id": "1fbbbd7b",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2de0c32",
+   "id": "eaae31ec",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0bebfb",
+   "id": "51ddd206",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2e593e9",
+   "id": "51adbc4e",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b48d8e6",
+   "id": "69234342",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebc35a79",
+   "id": "8dc56cb0",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate the compile time."
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f922142",
+   "id": "a3992a79",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d22c7ce3",
+   "id": "740b9d65",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793ab3bb",
+   "id": "51473046",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a8cf5b",
+   "id": "75c74fbc",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7638a1f7",
+   "id": "5014d097",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.005818,
+  "date": 1750896811.2226853,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
