--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6811ba3e",
+   "id": "fd726d3b",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151f8385",
+   "id": "5d32763e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5cfa5a0",
+   "id": "f7ef43ca",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c13dba",
+   "id": "284dd9c8",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7588cb5",
+   "id": "61550917",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b16cd27",
+   "id": "0781cd77",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d48f0a1",
+   "id": "e034a74e",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aaf975b",
+   "id": "a84691e2",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4dab0d1",
+   "id": "d968fb0c",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a518fa4",
+   "id": "b7843b8b",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e097aeb",
+   "id": "feac51bf",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de2c60f7",
+   "id": "47677601",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bbd427b",
+   "id": "cc130e16",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdbf1bfe",
+   "id": "e19a0449",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef89ea3",
+   "id": "596b4ae5",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129bdda9",
+   "id": "9df6545b",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62908940",
+   "id": "35bc739c",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac5a63d",
+   "id": "30942e3d",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d58929b2",
+   "id": "a1eb8213",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb1e030",
+   "id": "cf7826a8",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b63dbd5b",
+   "id": "10387b13",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f6c0b5",
+   "id": "90333fa9",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af648a4b",
+   "id": "8eeb4606",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93dc2e83",
+   "id": "da519ec1",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eedf161d",
+   "id": "68841c1a",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e0bc80",
+   "id": "9d1e4db0",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6f2e50",
+   "id": "e770a3c8",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41aa5a9",
+   "id": "c6e97af7",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d5575d3",
+   "id": "0e117e01",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ab2a39",
+   "id": "4046e403",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11fff798",
+   "id": "df9ed143",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c0e1b8b",
+   "id": "cb23a133",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f039617",
+   "id": "95f1780d",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41d1527",
+   "id": "2ae7d4d8",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ca7f7f",
+   "id": "14945ab7",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c36195",
+   "id": "0610188e",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d40f1056",
+   "id": "5b55b5f5",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5f51632",
+   "id": "02e338e6",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2835e6d5",
+   "id": "1d7689dc",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d83b7db",
+   "id": "74b19bdf",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d31b1f4",
+   "id": "7ae97ec1",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "729d6679",
+   "id": "b0c7a198",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6529eb0b",
+   "id": "465cf052",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd4ba37a",
+   "id": "646bbc90",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae01e211",
+   "id": "0110e87b",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20a7f4fd",
+   "id": "742e9a5a",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d3409ae",
+   "id": "282b48c3",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec12c8a3",
+   "id": "a95476b8",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "883afcb3",
+   "id": "1765c506",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41e3ab2",
+   "id": "5bd3dc2b",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "627ded2d",
+   "id": "e0ad671c",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -670,7 +670,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.3637285,
+  "date": 1750896811.498885,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
