--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "44248dfa",
+   "id": "a3cc62ea",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e0e622",
+   "id": "d14ac97e",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34810d27",
+   "id": "b7dcda70",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49dc02f9",
+   "id": "43df09a6",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca9fec2",
+   "id": "ffda223e",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e95e380",
+   "id": "bac915b9",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb9573b",
+   "id": "2e96f594",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6265cadd",
+   "id": "e92b6613",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "008158d9",
+   "id": "9972acf1",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9acd00d",
+   "id": "d8d84c97",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "553d594b",
+   "id": "57e1d48b",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2d910e",
+   "id": "29bb8869",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd1a7c52",
+   "id": "72ad87c3",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1faa4af9",
+   "id": "42062f1e",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26964424",
+   "id": "21545bae",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9daa39d",
+   "id": "9729aaed",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12834a1a",
+   "id": "16dcb8e6",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a972131d",
+   "id": "cfa83611",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b4249c",
+   "id": "75e93c0c",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae7fe14",
+   "id": "3b666d48",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0dedcc",
+   "id": "7bf504e6",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cceaedf",
+   "id": "6c014b6b",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b76a714",
+   "id": "11648153",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b5bb9d9",
+   "id": "5fece33a",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a23d796",
+   "id": "ef9c676b",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3aa553b",
+   "id": "73871768",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2ac0dbc",
+   "id": "6ac40e86",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd839503",
+   "id": "c8f6b0cb",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec42219b",
+   "id": "fa796fda",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d0947d",
+   "id": "5aba2cee",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ebfaa54",
+   "id": "4a6187d8",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5245efd0",
+   "id": "c70cde30",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71be10b4",
+   "id": "a0c62023",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57ee44e",
+   "id": "ce86def7",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20b7e7be",
+   "id": "6dad1902",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7adae9e",
+   "id": "4cf3a10a",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe56369",
+   "id": "a2efd39c",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fa33d5",
+   "id": "0311ffb2",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbfbf24d",
+   "id": "dcd3ee7c",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333aec65",
+   "id": "6daee4f0",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61e2169",
+   "id": "aa9dc946",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dabea94",
+   "id": "ca208ce6",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85acbd27",
+   "id": "68716564",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8421519a",
+   "id": "2ab19f36",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d527d7",
+   "id": "b607adaf",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7515297e",
+   "id": "195ad21f",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612d21a6",
+   "id": "b30c9f98",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d296b8c",
+   "id": "d5377182",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.454859,
+  "date": 1750896811.5844731,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
