--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9422c0f9",
+   "id": "8aca68bf",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f14c8dd",
+   "id": "6e16b76f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99e5c9d",
+   "id": "47d127c7",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d73c8a07",
+   "id": "20390b24",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dab5118",
+   "id": "b79966c3",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1256f6a",
+   "id": "5151a9e1",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69f7a3e",
+   "id": "611a52db",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aa0a145",
+   "id": "ce2e47aa",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d096b29",
+   "id": "2274c709",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270b3c37",
+   "id": "f3c4c3e2",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5996b422",
+   "id": "d57b2a27",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5463717a",
+   "id": "bf3e0059",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2633e3c6",
+   "id": "df63914d",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ec8fca",
+   "id": "faf13615",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf47111",
+   "id": "fa689ea7",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918713bf",
+   "id": "b81f23d2",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8606b912",
+   "id": "96beea59",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea44dc8",
+   "id": "82c534a4",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1974bf",
+   "id": "a02c5ff8",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "339a4b44",
+   "id": "52bea016",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebea2473",
+   "id": "fd679c6e",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cfb065e",
+   "id": "4e10f90a",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc302bfb",
+   "id": "4fce4c74",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2124671a",
+   "id": "141ddfde",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c9236d0",
+   "id": "fc4a5177",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16157195",
+   "id": "2f913fee",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0128db",
+   "id": "bc2365f8",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117bf966",
+   "id": "069ba344",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd38de2",
+   "id": "a9b12aac",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df10a8cb",
+   "id": "3ccf662a",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4a03fa",
+   "id": "ec2d73e0",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf40bab",
+   "id": "89d95dbb",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b728f918",
+   "id": "40b9ef60",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d718f0ba",
+   "id": "90aa3503",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd3cdb5",
+   "id": "044fb8b4",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e662782b",
+   "id": "47903d49",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "423c159b",
+   "id": "2b427ddc",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7910cdf",
+   "id": "adc0b994",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e54f284",
+   "id": "5c1db9ec",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac210f01",
+   "id": "dbbd95dc",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d602b0da",
+   "id": "8457f8a6",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1dd8895",
+   "id": "a1ebd230",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6951d4c",
+   "id": "dbb4a938",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f11ccad",
+   "id": "d1f37cc3",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5702770d",
+   "id": "3bd973fc",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17102a55",
+   "id": "ea265c73",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2f57166",
+   "id": "1cc1e447",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e1812e",
+   "id": "f89168d2",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a37c38d",
+   "id": "5c67c689",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df32a010",
+   "id": "b06dac09",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c49bc78",
+   "id": "a16d4920",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bcfdbf5",
+   "id": "7959eee3",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37fd36e2",
+   "id": "6440287c",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "165f056d",
+   "id": "584c7188",
    "metadata": {
     "hide-output": false
    },
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97aa4b88",
+   "id": "848cdbfc",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad684d7",
+   "id": "1c073a8d",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f661adea",
+   "id": "fe44762e",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b70afc4",
+   "id": "1f5a674d",
    "metadata": {
     "hide-output": false
    },
@@ -978,7 +978,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.6148756,
+  "date": 1750896811.733623,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
