--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "13d054f3",
+   "id": "2d8d7858",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8efea3db",
+   "id": "cf9c71c4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11fe23e6",
+   "id": "20d28b69",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565637f7",
+   "id": "d1be3deb",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1ce5a6",
+   "id": "2bec5fc4",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f591ffc1",
+   "id": "280577ca",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "838bf1f0",
+   "id": "4215936b",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50b0536b",
+   "id": "1a4f9161",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f681819b",
+   "id": "d5dc0c70",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1ee4036",
+   "id": "828f4bdf",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57470950",
+   "id": "694af118",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0e30f7b",
+   "id": "3d594c58",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5529e0c",
+   "id": "5aa1253c",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff5db30",
+   "id": "1453e68a",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f9d089",
+   "id": "c2f0a8ea",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e31c08",
+   "id": "a55f98e0",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97b6149",
+   "id": "934f11e6",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b210294",
+   "id": "1914c261",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd86d59d",
+   "id": "9085dc81",
    "metadata": {
     "hide-output": false
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68918709",
+   "id": "d3eacf59",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3734d0d4",
+   "id": "ac78aff7",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e93cb39",
+   "id": "ed8b284b",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb5abe6b",
+   "id": "6036fcf8",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68037bd8",
+   "id": "4ce3c1ae",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e95a864c",
+   "id": "7ec8de0c",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5d59677",
+   "id": "e1fd1be5",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd25abc8",
+   "id": "359b5f3e",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67812ac2",
+   "id": "8ae11f61",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cfed382",
+   "id": "fdfc419e",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8f86d9",
+   "id": "74a8a5b6",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eda5b4d",
+   "id": "2a638e4a",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a8515f",
+   "id": "5f263398",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c37afd04",
+   "id": "e2038d5f",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abe9de4",
+   "id": "22f65d4d",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a9dfd2",
+   "id": "4e5bc0d0",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a20885",
+   "id": "8d5dc11e",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5351bc8",
+   "id": "5b0d1b44",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b236f3d",
+   "id": "ec6fa6c8",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.9766934,
+  "date": 1750896811.892509,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
