--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "024ba826",
+   "id": "218b6563",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e85f7df",
+   "id": "7ce95866",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df19bc90",
+   "id": "373719df",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51d21db3",
+   "id": "6e6f86ae",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78df1948",
+   "id": "b3302b5a",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0055480b",
+   "id": "9274dd1b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ae3512",
+   "id": "bbfdf3ad",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6390ae8f",
+   "id": "2af2c62a",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ded4d0",
+   "id": "6442298d",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ff57d61",
+   "id": "78172f3c",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6281b6",
+   "id": "bb897170",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "555b6fbd",
+   "id": "4dd343df",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bfdade2",
+   "id": "49156fee",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07527b9e",
+   "id": "071e6c9b",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f4c63a",
+   "id": "d7541bc7",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0219b271",
+   "id": "886dcb64",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769cc1d4",
+   "id": "70994f5b",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d46009",
+   "id": "4e098d50",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b00374",
+   "id": "cc67e0c2",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e03f9c",
+   "id": "541c78a7",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bebd63a",
+   "id": "690ebf0d",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d99cee8",
+   "id": "62981298",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae2492a",
+   "id": "e19c7a3d",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5854ea5",
+   "id": "ec5882f5",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c2526f",
+   "id": "03760037",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468851ad",
+   "id": "828c19b7",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd283c42",
+   "id": "671d4fdd",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5319054b",
+   "id": "09597b28",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ba5293",
+   "id": "4bcda748",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59ea1c83",
+   "id": "f09ecdc5",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77b80226",
+   "id": "a15b7511",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65cf30c9",
+   "id": "04097684",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a064b2f0",
+   "id": "48b9eeea",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "490ef682",
+   "id": "40ea024c",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5f2fa6",
+   "id": "a867ded0",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75fccdaf",
+   "id": "4ad6d4c9",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dd69bd4",
+   "id": "9b7057f1",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "344ed52b",
+   "id": "c4b1744e",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111d05c7",
+   "id": "3fed5de8",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435fe81b",
+   "id": "9413f1e4",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf79a2d1",
+   "id": "25c7b992",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a1f98e9",
+   "id": "91583172",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f003e6a6",
+   "id": "3c6005c0",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c42cd70",
+   "id": "da6979ac",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bba39c9",
+   "id": "4f23bf1d",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc677a77",
+   "id": "e6cc8d2f",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852d35df",
+   "id": "6a0f8c18",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "806b9b1b",
+   "id": "4b3c0b65",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b0a9d59",
+   "id": "38b75281",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0069d3",
+   "id": "a5df89a6",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dcd183f",
+   "id": "ed8f3d9b",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6089caa",
+   "id": "054d5e59",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "895760c7",
+   "id": "77d06a80",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be2967b",
+   "id": "d107be7b",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8735510",
+   "id": "2ed0b45d",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66b4e639",
+   "id": "a1d65b42",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "379ff0d9",
+   "id": "f2291a14",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "210628ef",
+   "id": "b60e4adf",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2fc7ea",
+   "id": "9eb4f085",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53fafae7",
+   "id": "e2d932f1",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22bfb731",
+   "id": "ce196870",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1840e53d",
+   "id": "72d4ec01",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03baf8c5",
+   "id": "a1f2db6d",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb46a030",
+   "id": "a8b8377a",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "323d5318",
+   "id": "ca2d8e5f",
    "metadata": {
     "hide-output": false
    },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e07f415",
+   "id": "89821a9d",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08f4b625",
+   "id": "80530ac8",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97dff1ad",
+   "id": "2b6209da",
    "metadata": {
     "hide-output": false
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a142fd9",
+   "id": "b12c0c8b",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d71ebfe",
+   "id": "f79276e3",
    "metadata": {
     "hide-output": false
    },
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af22bb7",
+   "id": "65d1d1ef",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae8bb55",
+   "id": "634db226",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e828abae",
+   "id": "07cc7a90",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24985e05",
+   "id": "c123f1d9",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "180b7337",
+   "id": "7fc2d4c5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a217a404",
+   "id": "ae3a37f7",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2d0a213",
+   "id": "19e6ec79",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb7c9e5",
+   "id": "f0e0a6a3",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03fd62ab",
+   "id": "b3effab4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d34241c3",
+   "id": "e8cd5524",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763758.0423112,
+  "date": 1750896812.072348,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
