--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f11ef127",
+   "id": "353590e0",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b5018e1",
+   "id": "9a872269",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ab49a8",
+   "id": "24d22901",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14577372",
+   "id": "85b6bbc7",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3adb4da6",
+   "id": "0b788595",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4300d8ab",
+   "id": "40898f76",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ef1c3b",
+   "id": "70a8dba0",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88862ca1",
+   "id": "d90cc0af",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4efdd23",
+   "id": "30db21a3",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7171e58",
+   "id": "84a1db25",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da8e3a9",
+   "id": "38bcbbb5",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790c8099",
+   "id": "ed7c8fe5",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a65c5b3e",
+   "id": "a3e9a383",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdad8d84",
+   "id": "1923563a",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007bbd16",
+   "id": "ff93cc06",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab47660",
+   "id": "a63922c5",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6c1913",
+   "id": "e5642b22",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81709b77",
+   "id": "bf86de2d",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fcd50c9",
+   "id": "a604ec66",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3d622b",
+   "id": "dbdb3ec5",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3281b8dd",
+   "id": "4c1d20c1",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8add0b9",
+   "id": "4b56df18",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f2b6e2",
+   "id": "213f3221",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a883968e",
+   "id": "c96a9ab1",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa479c2",
+   "id": "a597d4ee",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616636cf",
+   "id": "4da94e78",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4264ea8e",
+   "id": "1d761b19",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01e74358",
+   "id": "9a1f6183",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b787c081",
+   "id": "001c6fc0",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7108daa3",
+   "id": "516cc035",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c93cc4b",
+   "id": "44d1ae83",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d0e740",
+   "id": "483609f1",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f70f57",
+   "id": "f3ff4d9c",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605413a5",
+   "id": "b462d91a",
    "metadata": {
     "hide-output": false
    },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "610e9bcb",
+   "id": "13ef36a8",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567ee3be",
+   "id": "68a07861",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deea7138",
+   "id": "5b641e97",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f8441f8",
+   "id": "0cbfc1c1",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe14630c",
+   "id": "954b8799",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb873c4e",
+   "id": "f5c13807",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e120a49",
+   "id": "efbab6af",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e34dcbc4",
+   "id": "d4add9a4",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "009c6644",
+   "id": "17f1591d",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8113e1b1",
+   "id": "ba0d0994",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe91ecf",
+   "id": "cc310202",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137eeaca",
+   "id": "e8668973",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b6479d",
+   "id": "ebd708ce",
    "metadata": {
     "hide-output": false
    },
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8349e2",
+   "id": "65ed362d",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d34e7c31",
+   "id": "ac7a2adf",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93837004",
+   "id": "26558777",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "080dd039",
+   "id": "a220c7c9",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6bd962a",
+   "id": "730597db",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d07eb8c",
+   "id": "e6411a6d",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba57401e",
+   "id": "fabc05ea",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5e77d3",
+   "id": "843cefcb",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f8979ad",
+   "id": "a3aa0c1c",
    "metadata": {
     "hide-output": false
    },
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d3e2c5a",
+   "id": "77e7cb09",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc9ff7c",
+   "id": "13434a8c",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325eaef6",
+   "id": "b16187c2",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11cd17f",
+   "id": "ee4e4bb8",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccac463d",
+   "id": "43b2f47e",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8d0cd1",
+   "id": "f485bb0a",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e55cd8f0",
+   "id": "557e5961",
    "metadata": {
     "hide-output": false
    },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84958880",
+   "id": "1ed6f4c7",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9af8df6c",
+   "id": "37b7905e",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0dac6e3",
+   "id": "c3714770",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61595742",
+   "id": "baeba6fe",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7414081e",
+   "id": "66b18ab2",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5467fb35",
+   "id": "4f04865c",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7efcf3f0",
+   "id": "19354765",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fa0329",
+   "id": "1dbe261d",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdbbcbd3",
+   "id": "5ff8c584",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c679c5",
+   "id": "89902057",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612cedbc",
+   "id": "52a3f942",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cbfde10",
+   "id": "8aef308f",
    "metadata": {
     "hide-output": false
    },
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bea30d",
+   "id": "12175fbf",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1580,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "576a3a4c",
+   "id": "87599a5b",
    "metadata": {
     "hide-output": false
    },
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cde0199",
+   "id": "537445f0",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "365a5e59",
+   "id": "af2c0f28",
    "metadata": {
     "hide-output": false
    },
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e1bb68",
+   "id": "f2c413ab",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6845011e",
+   "id": "2384786c",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ae061b",
+   "id": "fcde1649",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1650,7 +1650,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.517465,
+  "date": 1750896811.6430497,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
