--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f71d124",
+   "id": "781e00da",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812714e3",
+   "id": "c2d0efcb",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77def731",
+   "id": "5e26b771",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb2723b",
+   "id": "acf2e4eb",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f946c4bf",
+   "id": "6e0449bb",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d44c9a05",
+   "id": "8ddeb1fc",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec71ff1",
+   "id": "6ffc4905",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e5000f",
+   "id": "dbccb8cd",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53c477d2",
+   "id": "6803d245",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72fb7913",
+   "id": "8a50eb67",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f23e386",
+   "id": "8ff10c50",
    "metadata": {},
    "source": [
     "Here we go"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b301c76",
+   "id": "ee646163",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66cd38f2",
+   "id": "1294a37f",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f2e362",
+   "id": "182a2f58",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed36a7cd",
+   "id": "0f0e7cc6",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcc49de",
+   "id": "c90c890e",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b079fd",
+   "id": "9c1b0ddb",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed1e62b",
+   "id": "cd997783",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1215d9e2",
+   "id": "4da3f0c2",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "735bb673",
+   "id": "9b03a1f4",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16600c7f",
+   "id": "d9880aeb",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd9d0a1c",
+   "id": "8ef9e647",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa4f6252",
+   "id": "462334b5",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd99945f",
+   "id": "65f4c95b",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b168c15",
+   "id": "ed7e2db3",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7278ed65",
+   "id": "522ec8c9",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce5af0a",
+   "id": "53dccaab",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ec8e7a",
+   "id": "07c88a2b",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843b38a8",
+   "id": "bc8e4ccf",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956728eb",
+   "id": "9faf5cbb",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b410defd",
+   "id": "08d389b9",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12726305",
+   "id": "ede96f6c",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bfcb29",
+   "id": "31430956",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42a19e7",
+   "id": "05f188d1",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b48f985",
+   "id": "ebb0c23d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed6b273",
+   "id": "4a15144e",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7077ca3",
+   "id": "be27c5e1",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761370aa",
+   "id": "32e241f5",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d9918a7",
+   "id": "cd14482c",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8f5948",
+   "id": "4d03ab2e",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436d26e5",
+   "id": "81000772",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "612115cd",
+   "id": "7a1125c5",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61eab21",
+   "id": "621138f5",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bde61d3",
+   "id": "c73639f3",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3b15b1c",
+   "id": "8e1424cb",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea6c284a",
+   "id": "ab6980b6",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890e9c8f",
+   "id": "98a79642",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892176f9",
+   "id": "80164144",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e21b238e",
+   "id": "55fdef4e",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c08879f4",
+   "id": "3e74ba27",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "255f8540",
+   "id": "72828370",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49cd28a0",
+   "id": "bc6dcc74",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66be21d",
+   "id": "83470e9c",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87fc3187",
+   "id": "b80bdf8b",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e0015f",
+   "id": "12359914",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f534d1",
+   "id": "eb4d66f2",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c70dbad",
+   "id": "aaadcf4d",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -882,7 +882,7 @@
   }
  ],
  "metadata": {
-  "date": 1750763757.5823898,
+  "date": 1750896811.703921,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
